--- a/Makefile.in
+++ b/Makefile.in
@@ -19,15 +19,16 @@ SRC=    daemon.c receive.c argcargv.c envelope.c auth.c base64.c \
 	simsend.c rfc822.c rcptlist.c tz.c tlsconnect.c
 SIMTAOBJ=	daemon.o receive.o argcargv.o envelope.o base64.o tz.o
 TLSCONOBJ=	tlsconnect.o
+SIMSENDOBJ=	simsend.o message.o
 
-INCPATH=	-Ilibsnet -I/usr/local/openssl/include
+INCPATH=	-Ilibsnet @CPPFLAGS@
 DEFS=	-DLOG_SIMTA=${SIMTALOG} -DTLS -DSOLARIS
 CFLAGS=	${DEFS} ${OPTOPTS} ${INCPATH}
 TAGSFILE=	tags
-LIBPATH=	-Llibsnet/.libs -L/usr/local/openssl/lib
+LIBPATH=	-Llibsnet/.libs @LDFLAGS@
 LIBS=	-lsnet @LIBS@
 
-TARGETS=	simta tlsconnect
+TARGETS=	simta tlsconnect simsendmail
 
 all : ${TARGETS}
 
@@ -40,9 +41,8 @@ simta : libsnet/libsnet.a ${SIMTAOBJ} Makefile
 tlsconnect : libsnet/libsnet.a ${TLSCONOBJ} Makefile
 	${CC} ${CFLAGS} ${LDFLAGS} -o tlsconnect ${TLSCONOBJ} ${LIBPATH} ${LIBS}
 
-simsendmail : ${SIMSENDMAILOBJ}
-	${CC} ${CFLAGS} ${LDFALGS} -o simsendmail ${SIMSENDMAILOBJ} \
-		${LIBPATH} ${LIBS}
+simsendmail : libsnet/libsnet.a ${SIMSENDOBJ} Makefile
+	${CC} ${CFLAGS} ${LDFLAGS} -o simsendmail ${SIMSENDOBJ} ${LIBPATH} ${LIBS}
 
 FRC :
 
