--- a/Makefile.in
+++ b/Makefile.in
@@ -18,7 +18,7 @@ CC=		@CC@
 OPTOPTS=	@OPTOPTS@
 INSTALL=	@INSTALL@
 INCPATH=	-Ilibsnet @CPPFLAGS@
-DEFS=		-DLOG_SIMTA=${SIMTALOG} -DTLS
+DEFS=		-DLOG_SIMTA=${SIMTALOG} -DTLS -DDEBUG
 LIBPATH=	-Llibsnet/.libs @LDFLAGS@
 LIBS=		-lsnet @LIBS@
 TAGSFILE=	tags
