added send applet added debugging functions can read message E & D files from filesystem

--- a/Makefile.in
+++ b/Makefile.in
@@ -11,6 +11,7 @@ SRC=    daemon.c receive.c argcargv.c envelope.c auth.c base64.c \
 SIMTAOBJ=	daemon.o receive.o argcargv.o envelope.o base64.o tz.o
 TLSCONOBJ=	tlsconnect.o
 SIMSENDOBJ=	simsend.o message.o envelope.o tz.o
+SENDOBJ=	send.o message.o envelope.o tz.o
 SIMLOGOBJ=	simlog.o
 
 SIMTALOG=LOG_MAIL
@@ -26,7 +27,7 @@ TAGSFILE=	tags
 
 CFLAGS=		${DEFS} ${OPTOPTS} ${INCPATH}
 
-TARGETS=	simta tlsconnect simsendmail
+TARGETS=	simta tlsconnect simsendmail send
 
 all : ${TARGETS}
 
@@ -44,6 +45,9 @@ tlsconnect : libsnet/libsnet.a ${TLSCONOBJ} Makefile
 
 simsendmail : libsnet/libsnet.a ${SIMSENDOBJ} Makefile
 	${CC} ${CFLAGS} ${LDFLAGS} -o simsendmail ${SIMSENDOBJ} ${LIBPATH} ${LIBS}
+
+send : libsnet/libsnet.a ${SENDOBJ} Makefile
+	${CC} ${CFLAGS} ${LDFLAGS} -o send ${SENDOBJ} ${LIBPATH} ${LIBS}
 
 simlog : libsnet/libsnet.a ${SIMLOGOBJ} Makefile
 	${CC} ${CFLAGS} ${LDFLAGS} -o simlog ${SIMLOGOBJ} ${LIBPATH} ${LIBS}
