--- a/Makefile.in
+++ b/Makefile.in
@@ -13,7 +13,7 @@ TLSCONOBJ=	tlsconnect.o
 SIMSENDOBJ=	simsend.o message.o envelope.o tz.o
 SENDOBJ=	send.o smtp.o message.o envelope.o tz.o
 SIMLOGOBJ=	simlog.o
-QRUNNEROBJ=	q_runner.c queue.o ll.o message.o envelope.o tz.o
+QRUNNEROBJ=	q_runner.c queue.o ll.o message.o envelope.o tz.o ml.o
 QCLEANUPOBJ=	q_cleanup.c queue.o ll.o message.o envelope.o tz.o
 
 SIMTALOG=LOG_MAIL
