--- a/Makefile.in
+++ b/Makefile.in
@@ -8,7 +8,7 @@ SBINDIR=@sbindir@
 
 SRC=    daemon.c receive.c argcargv.c envelope.c auth.c base64.c \
 	simsend.c rfc822.c rcptlist.c tz.c tlsconnect.c
-SIMTAOBJ=	daemon.o receive.o argcargv.o envelope.o base64.o tz.o
+SIMTAOBJ=	daemon.o receive.o argcargv.o envelope.o base64.o tz.o 
 TLSCONOBJ=	tlsconnect.o
 SIMSENDOBJ=	simsend.o message.o envelope.o tz.o
 SENDOBJ=	send.o smtp.o message.o envelope.o tz.o
@@ -43,7 +43,7 @@ tz.o : tz.c
 	${CC} ${CFLAGS} @HAVE_TM_GMTOFF@ -c tz.c -o tz.o
 
 simta : libsnet/libsnet.a ${SIMTAOBJ} Makefile
-	${CC} ${CFLAGS} ${LDFLAGS} -o simta ${SIMTAOBJ} ${LIBPATH} ${LIBS}
+	${CC} ${CFLAGS} ${LDFLAGS} -o simta ${SIMTAOBJ} ${LIBPATH} -ldnsr ${LIBS}
 
 tlsconnect : libsnet/libsnet.a ${TLSCONOBJ} Makefile
 	${CC} ${CFLAGS} ${LDFLAGS} -o tlsconnect ${TLSCONOBJ} ${LIBPATH} ${LIBS}
