--- a/configure.ac
+++ b/configure.ac
@@ -12,6 +12,9 @@ AC_PREFIX_DEFAULT(/usr/local)
 AC_PROG_CC
 AC_PROG_INSTALL
 
+# Find mail.local
+PROG_MAIL_LOCAL
+
 if test x_$GCC = x_yes; then
     OPTOPTS=${OPTOPTS:-"-Wall -Wmissing-prototypes -Wconversion"}
 fi
