--- a/Makefile.in
+++ b/Makefile.in
@@ -58,7 +58,9 @@ simlog : libsnet/libsnet.a ${SIMLOGOBJ} Makefile
 	${CC} ${CFLAGS} ${LDFLAGS} -o simlog ${SIMLOGOBJ} ${LIBPATH} ${LIBS}
 
 ml.o : ml.c
-	${CC} ${CFLAGS} -DSIMTA_MAIL_LOCAL=\"@SIMTA_MAIL_LOCAL@\" \
+	${CC} ${CFLAGS} \
+		-DSIMTA_MAIL_LOCAL=\"@SIMTA_MAIL_LOCAL@\" \
+		-DSIMTA_PROCMAIL=\"@SIMTA_PROCMAIL@\" \
 		-c ml.c -o ml.o
 
 q_runner : libsnet/libsnet.a ${QRUNNEROBJ} Makefile
