--- a/Makefile.in
+++ b/Makefile.in
@@ -10,7 +10,7 @@ RESOLV_CONF=@resolvconf@
 
 SRC=    daemon.c receive.c argcargv.c envelope.c auth.c base64.c \
 	simsend.c rfc822.c rcptlist.c tz.c tlsconnect.c
-SIMTAOBJ=	daemon.o receive.o argcargv.o envelope.o base64.o tz.o 
+SIMTAOBJ=	daemon.o receive.o argcargv.o envelope.o base64.o tz.o message.o
 TLSCONOBJ=	tlsconnect.o
 SIMSENDOBJ=	simsend.o message.o envelope.o tz.o
 SENDOBJ=	send.o smtp.o message.o envelope.o tz.o
