--- a/Makefile.in
+++ b/Makefile.in
@@ -9,8 +9,9 @@ SBINDIR=@sbindir@
 RESOLV_CONF=@resolvconf@
 
 SRC=    daemon.c receive.c argcargv.c envelope.c auth.c base64.c \
-	simsend.c rfc822.c rcptlist.c tz.c tlsconnect.c
-SIMTAOBJ=	daemon.o receive.o argcargv.o envelope.o base64.o tz.o message.o
+	simsend.c rfc822.c rcptlist.c tz.c tlsconnect.c address.c
+SIMTAOBJ=	daemon.o receive.o argcargv.o envelope.o base64.o tz.o \
+		address.o message.o
 TLSCONOBJ=	tlsconnect.o
 SIMSENDOBJ=	simsend.o message.o envelope.o tz.o
 SENDOBJ=	send.o smtp.o message.o envelope.o tz.o
