Changed comment. Don't enable -DDEBUG by default, oops.

--- a/Makefile.in
+++ b/Makefile.in
@@ -25,7 +25,7 @@ CC=		@CC@
 OPTOPTS=	@OPTOPTS@
 INSTALL=	@INSTALL@
 INCPATH=	-Idenser -Ilibsnet @CPPFLAGS@
-DEFS=		-DLOG_SIMTA=${SIMTALOG} -DTLS -DDEBUG
+DEFS=		-DLOG_SIMTA=${SIMTALOG} -DTLS
 LIBPATH=	-Ldenser -Llibsnet/.libs @LDFLAGS@
 LIBS=		-ldnsr -lsnet @LIBS@
 TAGSFILE=	tags
