--- a/Makefile.in
+++ b/Makefile.in
@@ -11,7 +11,7 @@ RESOLV_CONF=@resolvconf@
 SRC=    daemon.c receive.c argcargv.c envelope.c auth.c base64.c \
 	simsend.c rfc822.c rcptlist.c tz.c tlsconnect.c address.c
 SIMTAOBJ=	daemon.o receive.o argcargv.o envelope.o base64.o tz.o \
-		address.o line_file.o
+		address.o line_file.o ll.o bdb.o
 TLSCONOBJ=	tlsconnect.o
 SIMSENDOBJ=	simsend.o line_file.o envelope.o tz.o header.o
 SIMLOGOBJ=	simlog.o
