--- a/Makefile.in
+++ b/Makefile.in
@@ -9,12 +9,15 @@ SBINDIR=@sbindir@
 SRC=    daemon.c receive.c argcargv.c envelope.c auth.c base64.c \
 	simsend.c rfc822.c rcptlist.c tz.c tlsconnect.c address.c
 SIMTAOBJ=	daemon.o receive.o argcargv.o envelope.o base64.o tz.o \
-		address.o line_file.o ll.o bdb.o header.o simta.o
+		address.o line_file.o ll.o bdb.o header.o simta.o queue.c \
+		ml.o smtp.o
 TLSCONOBJ=	tlsconnect.o
 SIMSENDOBJ=	simsend.o line_file.o envelope.o tz.o header.o simta.o
 SIMLOGOBJ=	simlog.o
-QRUNNEROBJ=	q_runner.c queue.o ll.o line_file.o envelope.o tz.o ml.o smtp.o
-QCLEANUPOBJ=	q_cleanup.c queue.o ll.o line_file.o envelope.o tz.o
+QRUNNEROBJ=	q_runner.c queue.o ll.o line_file.o envelope.o tz.o ml.o \
+		simta.o smtp.o
+QCLEANUPOBJ=	q_cleanup.c queue.o ll.o line_file.o envelope.o tz.o ml.o \
+		smtp.o simta.o
 CONNECT_TESTOBJ=	connect_test.o smtp.o line_file.o envelope.o tz.o
 
 SIMTALOG=LOG_MAIL
@@ -46,13 +49,12 @@ daemon.o : daemon.c
 receive.o : receive.c
 	${CC} ${CFLAGS} \
 		-DVERSION=\"`cat VERSION`\" \
-		-DSIMTA_RESOLV_CONF=\"${RESOLV_CONF}\" \
 		-c receive.c -o receive.o
 
-smtp.o : smtp.c
+simta.o : simta.c
 	${CC} ${CFLAGS} \
 		-DSIMTA_RESOLV_CONF=\"${RESOLV_CONF}\" \
-		-c smtp.c -o smtp.o
+		-c simta.c -o simta.o
 
 address.o : address.c
 	${CC} ${CFLAGS} \
