--- a/Makefile.in
+++ b/Makefile.in
@@ -10,13 +10,13 @@ SRC=    daemon.c receive.c argcargv.c envelope.c auth.c base64.c \
 	simsend.c rfc822.c rcptlist.c tz.c tlsconnect.c address.c
 SIMTAOBJ=	daemon.o receive.o argcargv.o envelope.o base64.o tz.o \
 		address.o line_file.o ll.o bdb.o header.o simta.o queue.c \
-		ml.o smtp.o expand.o mx.o
+		ml.o smtp.o expand.o mx.o bounce.o
 TLSCONOBJ=	tlsconnect.o
 SIMSENDOBJ=	simsend.o line_file.o envelope.o tz.o header.o simta.o \
 		ll.o
 SIMLOGOBJ=	simlog.o
 QRUNNEROBJ=	q_runner.c queue.o ll.o line_file.o envelope.o tz.o ml.o \
-		simta.o smtp.o expand.o address.o bdb.o header.o
+		simta.o smtp.o expand.o address.o bdb.o header.o bounce.o
 QCLEANUPOBJ=	q_cleanup.c queue.o ll.o line_file.o envelope.o tz.o ml.o \
 		smtp.o simta.o
 
