--- a/Makefile.in
+++ b/Makefile.in
@@ -10,7 +10,7 @@ SRC=    daemon.c receive.c argcargv.c envelope.c auth.c base64.c \
 	simsend.c rfc822.c rcptlist.c tz.c tlsconnect.c address.c
 SIMTAOBJ=	daemon.o receive.o argcargv.o envelope.o base64.o tz.o \
 		address.o line_file.o ll.o bdb.o header.o simta.o queue.c \
-		ml.o smtp.o expand.o mx.o bounce.o nlist.o
+		ml.o smtp.o expand.o mx.o bounce.o nlist.o q_cleanup.o
 TLSCONOBJ=	tlsconnect.o
 SIMSENDOBJ=	simsend.o line_file.o envelope.o tz.o header.o simta.o \
 		ll.o nlist.o
