--- a/Makefile.in
+++ b/Makefile.in
@@ -5,6 +5,11 @@ MANDIR=@mandir@
 BINDIR=@bindir@
 ETCDIR=@sysconfdir@
 SBINDIR=@sbindir@
+RUNDIR=/var/run
+LIBDIR=/usr/lib
+LOCAL_Q=/var/spool/simta/local
+SLOW_Q=/var/spool/simta/slow
+FAST_Q=/var/spool/simta/fast
 
 SRC=    daemon.c receive.c argcargv.c envelope.c auth.c base64.c \
 	simsend.c rfc822.c rcptlist.c tz.c tlsconnect.c address.c
@@ -40,6 +45,24 @@ CFLAGS=		${DEFS} ${OPTOPTS} ${INCPATH}
 TARGETS=	simta tlsconnect simsendmail q_runner
 
 all : ${TARGETS}
+
+install : all FRC
+	-mkdir -p ${RUNDIR}
+	-mkdir -p ${LOCAL_Q}
+	-mkdir -p ${SLOW_Q}
+	-mkdir -p ${FAST_Q}
+	${INSTALL} -m 0755 -c simta ${SBINDIR}/
+	${INSTALL} -m 0755 -c simsendmail ${LIBDIR}/
+	ln ${LIBDIR}/simsendmail ${LIBDIR}/sendmail
+
+install-suid : all FRC
+	-mkdir -p ${RUNDIR}
+	-mkdir -p ${LOCAL_Q}
+	-mkdir -p ${SLOW_Q}
+	-mkdir -p ${FAST_Q}
+	${INSTALL} -c simta -m 6755 -g mail -o root ${SBINDIR}/
+	${INSTALL} -c simsendmail -m 6755 -g mail -o root ${LIBDIR}/
+	ln ${LIBDIR}/simsendmail ${LIBDIR}/sendmail
 
 daemon.o : daemon.c
 	${CC} ${CFLAGS} \
