Fixed bdb.h location.

--- a/Makefile.in
+++ b/Makefile.in
@@ -43,7 +43,7 @@ CFLAGS=		${DEFS} ${OPTOPTS} ${INCPATH}
 
 SIMTALIBPATH=	${LIBPATH} @SIMTALDFLAGS@
 SIMTALIBS=	${LIBS} @SIMTALIBS@
-SIMTAINCPATH=	${INCPATH} @SIMTACPPFLAGS@
+SIMTAINCPATH=	@SIMTACPPFLAGS@ ${INCPATH} 
 SIMTACFLAGS=	${DEFS} ${OPTOPTS} ${SIMTAINCPATH}
 
 MAN1TARGETS=	simsendmail.1
