--- a/Makefile.in
+++ b/Makefile.in
@@ -14,20 +14,21 @@ SLOW_Q=/var/spool/simta/slow
 FAST_Q=/var/spool/simta/fast
 DEAD_Q=/var/spool/simta/dead
 
-SRC=    daemon.c receive.c argcargv.c envelope.c auth.c base64.c \
+SRC=    @SRC@  daemon.c receive.c argcargv.c envelope.c auth.c base64.c \
 	simsend.c rfc822.c rcptlist.c tz.c tlsconnect.c address.c \
-	createdb.c ldap.c
-SIMTAOBJ=	daemon.o receive.o argcargv.o envelope.o base64.o tz.o \
-		address.o line_file.o ll.o bdb.o header.o simta.o queue.c \
-		ml.o smtp.o expand.o mx.o bounce.o nlist.o q_cleanup.o \
-		ldap.o
+	createdb.c
+SIMTAOBJ=	@SIMTA_OBJ@ daemon.o receive.o argcargv.o envelope.o base64.o \
+		tz.o address.o line_file.o ll.o bdb.o header.o simta.o \
+		queue.c ml.o smtp.o expand.o mx.o bounce.o nlist.o \
+		q_cleanup.o
 TLSCONOBJ=	tlsconnect.o
 SIMSENDOBJ=	simsend.o line_file.o envelope.o tz.o header.o simta.o \
 		ll.o nlist.o
 SIMLOGOBJ=	simlog.o
+#QRUNNER needs LDAP libs added
 QRUNNEROBJ=	q_runner.c queue.o ll.o line_file.o envelope.o tz.o ml.o \
 		simta.o smtp.o expand.o address.o bdb.o header.o bounce.o \
-		nlist.o q_cleanup.o ldap.o
+		nlist.o q_cleanup.o
 QCLEANUPOBJ=	q_cleanup.c queue.o ll.o line_file.o envelope.o tz.o ml.o \
 		smtp.o simta.o
 CREATEDBOBJ=	createdb.o argcargv.o bdb.o
@@ -43,7 +44,7 @@ INSTALL=	@INSTALL@
 INCPATH=	-Idenser -Ilibsnet @CPPFLAGS@
 DEFS=		-DLOG_SIMTA=${SIMTALOG} -DTLS
 LIBPATH=	-Ldenser -Llibsnet/.libs @LDFLAGS@
-LIBS=		-ldnsr -lsnet -lldap @LIBS@
+LIBS=		-ldnsr -lsnet @LIBS@
 TAGSFILE=	tags
 CFLAGS=		${DEFS} ${OPTOPTS} ${INCPATH}
 
