ldap integration: now builds with ldap libs if found

--- a/configure.ac
+++ b/configure.ac
@@ -43,6 +43,8 @@ AC_STRUCT_GMTOFF
 
 AC_SUBST(SRC, [])
 AC_SUBST(SIMTA_OBJ, [])
+AC_SUBST(SIMSEND_OBJ, [])
+AC_SUBST(Q_RUNNER_OBJ, [])
 
 CHECK_DB
 CHECK_LDAP
