--- a/Makefile.in
+++ b/Makefile.in
@@ -22,13 +22,13 @@ SIMTAOBJ=	@SIMTA_OBJ@ daemon.o receive.o argcargv.o envelope.o base64.o \
 		queue.c ml.o smtp.o expand.o mx.o bounce.o nlist.o \
 		q_cleanup.o
 TLSCONOBJ=	tlsconnect.o
-SIMSENDOBJ=	simsend.o line_file.o envelope.o tz.o header.o simta.o \
-		ll.o nlist.o
+SIMSENDOBJ=	@SIMSEND_OBJ@ simsend.o line_file.o envelope.o tz.o header.o \
+		simta.o ll.o nlist.o
 SIMLOGOBJ=	simlog.o
 #QRUNNER needs LDAP libs added
-QRUNNEROBJ=	q_runner.c queue.o ll.o line_file.o envelope.o tz.o ml.o \
-		simta.o smtp.o expand.o address.o bdb.o header.o bounce.o \
-		nlist.o q_cleanup.o
+QRUNNEROBJ=	@Q_RUNNER_OBJ@ q_runner.c queue.o ll.o line_file.o \
+		envelope.o tz.o ml.o simta.o smtp.o expand.o address.o bdb.o \
+		header.o bounce.o nlist.o q_cleanup.o
 QCLEANUPOBJ=	q_cleanup.c queue.o ll.o line_file.o envelope.o tz.o ml.o \
 		smtp.o simta.o
 CREATEDBOBJ=	createdb.o argcargv.o bdb.o
@@ -42,7 +42,7 @@ CC=		@CC@
 OPTOPTS=	@OPTOPTS@
 INSTALL=	@INSTALL@
 INCPATH=	-Idenser -Ilibsnet @CPPFLAGS@
-DEFS=		-DLOG_SIMTA=${SIMTALOG} -DTLS
+DEFS=		-DLOG_SIMTA=${SIMTALOG} -DTLS @DEFS@
 LIBPATH=	-Ldenser -Llibsnet/.libs @LDFLAGS@
 LIBS=		-ldnsr -lsnet @LIBS@
 TAGSFILE=	tags
