--- a/config.h.in
+++ b/config.h.in
@@ -37,3 +37,6 @@
 
 /* Define to 1 if your <sys/time.h> declares `struct tm'. */
 #undef TM_IN_SYS_TIME
+
+/* Define to 1 if you have LDAP */
+#undef HAVE_LDAP
