--- a/configure.ac
+++ b/configure.ac
@@ -45,6 +45,7 @@ AC_SUBST(SRC, [])
 AC_SUBST(SIMTA_OBJ, [])
 AC_SUBST(SIMSEND_OBJ, [])
 AC_SUBST(Q_RUNNER_OBJ, [])
+AC_SUBST(EXPANDER_OBJ, [])
 
 CHECK_DB
 CHECK_LDAP
